# nwqec

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build-deps.yml  build-wheels.yml  ci-build-test.yml
.github/workflows-reference/: build-deps.yml  ci-build-test.yml
build-python/: DartConfiguration.tcl  Makefile  compile_commands.json
build-python/prebuilt_deps/gmp-mpfr-macos-arm64/lib/: libgmp.la
build-python/prebuilt_deps/gmp-mpfr-macos-arm64/lib/pkgconfig/: gmp.pc
build-test/: DartConfiguration.tcl  Makefile  compile_commands.json
build-test-new/: DartConfiguration.tcl  Makefile  compile_commands.json  gridsynth  nwqec-cli  transpiler
build-test/prebuilt_deps/gmp-mpfr-macos-arm64/include/: gmp.h
build-test/prebuilt_deps/gmp-mpfr-macos-arm64/lib/: libmpfr.la
build-test/prebuilt_deps/gmp-mpfr-macos-arm64/lib/pkgconfig/: mpfr.pc
cmake/: NWQECConfig.cmake.in
docs/: cpp_cli.md  python_api.md
include/nwqec/core/: pass_manager.hpp  transpiler.hpp  transpiler_passes.hpp
include/nwqec/parser/: ast_generator.hpp
include/nwqec/passes/: pbc_pass.hpp  synthesize_rz_pass.hpp
include/nwqec/tableau/: htab.hpp
python/nwqec/: __init__.py  _core.cpp
tests/python/: test_api.py
tests/python/fixtures/: fixture_circuit.qasm
tools/: nwqec.cpp  transpiler.cpp
